--- a/.github/workflows/rules.yml
+++ b/.github/workflows/rules.yml
@@ -1,10 +1,15 @@
 # A single CI script with github workflow
 name: Tests
 
-on: [push]
+on:
+  push:
+  pull_request:
+    types: [labeled]
+
 
 jobs:
   build:
+    if: contains(github.event.pull_request.labels.*.name, 'run-workflow') || github.event_name == 'push'
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
