--- a/.github/workflows/rules.yml
+++ b/.github/workflows/rules.yml
@@ -26,7 +26,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytest-cov
         pip install .[tests,docs]
-        pip install git+https://github.com/qiboteam/qibojit
+        pip install git+https://github.com/qiboteam/qibojit/npmatrices
         pip install tensorflow
     - name: Test with pylint
       run: |
