--- a/.github/workflows/rules.yml
+++ b/.github/workflows/rules.yml
@@ -11,6 +11,7 @@ jobs:
   build:
     if: contains(github.event.pull_request.labels.*.name, 'run-workflow') || github.event_name == 'push'
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.7, 3.8, 3.9, '3.10']
@@ -36,6 +37,8 @@ jobs:
     - name: Test with pytest core
       run: |
         pytest src/qibo/tests/ --cov=qibo --cov-report=xml --pyargs qibo --durations=60
+      env:
+        OMP_NUM_THREADS: 1
     - name: Test documentation examples
       if: startsWith(matrix.os, 'ubuntu')
       run: |
@@ -44,7 +47,9 @@ jobs:
     - name: Test examples
       if: startsWith(matrix.os, 'ubuntu') && matrix.python-version == '3.9'
       run: |
-        OMP_NUM_THREADS=1 pytest examples/
+        pytest examples/
+      env:
+        OMP_NUM_THREAD: 1
     - name: Upload coverage to Codecov
       if: startsWith(matrix.os, 'ubuntu')
       uses: codecov/codecov-action@v2
