--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,11 +5,11 @@ repos:
     rev: v3.2.0
     hooks:
       - id: pyupgrade
-  # - repo: https://github.com/pycqa/isort
-  #   rev: 5.10.1
-  #   hooks:
-  #     - id: isort
-  #       args: ["--profile", "black"]
+  - repo: https://github.com/pycqa/isort
+    rev: 5.10.1
+    hooks:
+      - id: isort
+        args: ["--profile", "black"]
   # - repo: https://github.com/pre-commit/pre-commit-hooks
   #   rev: v4.3.0
   #   hooks:
@@ -18,7 +18,7 @@ repos:
   #     - id: check-yaml
   #     - id: debug-statements
   #     - id: fix-encoding-pragma
-  # - repo: https://github.com/psf/black
-  #   rev: 22.10.0
-  #   hooks:
-  #     - id: black
+  - repo: https://github.com/psf/black
+    rev: 22.10.0
+    hooks:
+      - id: black
