--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,7 +17,7 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: debug-statements
-      #- id: fix-encoding-pragma
+      - id: fix-encoding-pragma
   - repo: https://github.com/psf/black
     rev: 22.10.0
     hooks:
