--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,7 @@ repos:
       - id: check-yaml
       - id: debug-statements
       - id: fix-encoding-pragma
+        args: ["--remove"]
   - repo: https://github.com/psf/black
     rev: 22.10.0
     hooks:
@@ -19,6 +20,6 @@ repos:
       - id: isort
         args: ["--profile", "black"]
   - repo: https://github.com/asottile/pyupgrade
-    rev: v2.38.4
+    rev: v3.2.0
     hooks:
       - id: pyupgrade
