--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,7 +32,7 @@ jobs:
     steps:
       - name: Documentation
         run: |
-          pip install '.[docs]'
+          pip install qibo[docs]
           cd doc
           make html
       - name: Checkout
