--- a/.github/workflows/rules.yml
+++ b/.github/workflows/rules.yml
@@ -25,6 +25,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest-cov
+        pip install -r requirements.txt
         pip install .[tests,docs]
         pip install git+https://github.com/qiboteam/qibojit
         pip install tensorflow
