--- a/.github/workflows/rules.yml
+++ b/.github/workflows/rules.yml
@@ -18,4 +18,4 @@ jobs:
     with:
       os: ${{ matrix.os }}
       python-version: ${{ matrix.python-version }}
-      environment: ${{ github.event.repository.name }}
+      environment: qibo
