add python_files python_functions args

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ output-format = "colorized"
 
 [tool.pytest.ini_options]
 
+python_files = ['test_*.py']
+python_functions = ['test_*']
 testpaths = ['src/qibo/tests/']
 addopts = [
     '--cov=qibo',
