--- a/.github/workflows/rules.yml
+++ b/.github/workflows/rules.yml
@@ -20,5 +20,5 @@ jobs:
       python-version: ${{ matrix.python-version }}
       environment: "qibo"
       pip-flags: "tests,docs"
-      test-flag: ${{ matrix.os == 'ubuntu'}}
+      test-flag: ${{ matrix.os == 'ubuntu-latest'}}
     secrets: inherit
