--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,5 +15,8 @@ testpaths = ['src/qibo/tests/']
 filterwarnings = ["ignore::RuntimeWarning"]
 addopts = [
     '--cov=qibo',
-    '--cov-report=xml'
+    '--cov-report=xml',
+    '--pyargs qibo',
+    '--durations=60'
+
 ]
