--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,4 @@ output-format = "colorized"
 
 testpaths = ['src/qibo/tests/']
 filterwarnings = ["ignore::RuntimeWarning"]
-addopts = [
-    '--cov=qibo',
-    '--cov-report=xml',
-    '--pyargs qibo',
-    '--durations=60'
-
-]
+addopts =  ' --cov=qibo --cov-report=xml --pyargs qibo --durations=60'
