--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,6 @@ output-format = "colorized"
 
 [tool.pytest.ini_options]
 
-testpaths = ['src/qibo/tests/']
-filterwarnings = ["ignore::RuntimeWarning"]
-addopts =  ' --cov=qibo --cov-report=xml --pyargs qibo --durations=60'
+testpaths = ['tests/']
+filterwarnings = ['ignore::RuntimeWarning']
+addopts =  [ '--pyargs qibo', '--cov=qibo', '--cov-report=xml', '--durations=60']
