--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,4 +11,9 @@ output-format = "colorized"
 
 testpaths = ['src/qibo/tests/']
 filterwarnings = ['ignore::RuntimeWarning']
-addopts = ['--cov=qibo', '--cov-report=xml', '--durations=60']
+addopts = [
+  '--cov=qibo',
+  '--cov-report=xml',
+  '--cov-report=html',
+  '--durations=60',
+]
