--- a/.github/workflows/rules.yml
+++ b/.github/workflows/rules.yml
@@ -14,11 +14,9 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.7, 3.8, 3.9, '3.10']
-    uses: qiboteam/workflows/.github/workflows/rules.yml@main
+    uses: qiboteam/workflows/.github/workflows/rules-poetry.yml@main
     with:
       os: ${{ matrix.os }}
       python-version: ${{ matrix.python-version }}
-      environment: "qibo"
-      pip-extras: "tests,docs"
-      doctests: ${{ matrix.os == 'ubuntu-latest'}}
+      doctests: true
     secrets: inherit
