--- a/.github/workflows/rules.yml
+++ b/.github/workflows/rules.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.7, 3.8, 3.9, '3.10']
+        python-version: [ 3.8, 3.9, '3.10']
     uses: qiboteam/workflows/.github/workflows/rules-poetry.yml@poetry_flag
     with:
       os: ${{ matrix.os }}
