--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,10 @@ packages = [
 ]
 include = ["*.out", "*.yml"]
 
+[tool.setuptools.packages.find]
+where = ["src"]
+include = ["*"]
+
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
 scipy = "^1.10.1"
