--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ dill = "^0.3.6"
 pytest-cov = "^4.0.0"
 pylint = "^2.16.2"
 qibojit = {git = "https://github.com/qiboteam/qibojit"}
+tensorflow = "^2.11.0"
 
 [tool.poe.tasks]
 test = "pytest"
