--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ pytest-cov = "^4.0.0"
 pylint = "^2.16.2"
 qibojit = {git = "https://github.com/qiboteam/qibojit"}
 tensorflow = "^2.11.0"
+tensorflow-intel = {version = "^2.11.0", platform = "windows"}
 
 [tool.poe.tasks]
 test = "pytest"
