--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,11 +14,12 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [ 3.8, 3.9, '3.10']
-    uses: qiboteam/workflows/.github/workflows/deploy-pip-poetry.yml@main
+    uses: qiboteam/workflows/.github/workflows/deploy-pip-poetry.yml@poetry_flag
     with:
       os: ${{ matrix.os }}
       python-version: ${{ matrix.python-version }}
       publish: ${{ github.event_name == 'release' && github.event.action == 'published' && matrix.os == 'ubuntu-latest' && matrix.python-version == '3.9' }}
+      poetry-extras: "--with tests,docs"
     secrets: inherit
 
   deploy-docker-image:
