--- a/.github/workflows/rules.yml
+++ b/.github/workflows/rules.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [ 3.7, 3.8, 3.9, '3.10']
-    uses: qiboteam/workflows/.github/workflows/rules-poetry.yml@poetry_flag
+    uses: qiboteam/workflows/.github/workflows/rules-poetry.yml@main
     with:
       os: ${{ matrix.os }}
       python-version: ${{ matrix.python-version }}
