Send string instead of array

--- a/.github/workflows/selfhosted.yml
+++ b/.github/workflows/selfhosted.yml
@@ -14,7 +14,7 @@ jobs:
     if: contains(github.event.pull_request.labels.*.name, 'run-on-gpu')
     uses: qiboteam/workflows/.github/workflows/selfhosted.yml@selfhosted
     with:
-      used-labels: ${{ github.event.pull_request.labels.*.name }}
+      used-labels: ${{ toJSON(github.event.pull_request.labels.*.name) }}
       python-version: 3.8
       slurm-job: slurm-tests
       server-url: ${{ github.server_url }}
