--- a/.github/workflows/selfhosted.yml
+++ b/.github/workflows/selfhosted.yml
@@ -15,8 +15,8 @@ jobs:
     uses: qiboteam/workflows/.github/workflows/selfhosted.yml@selfhosted
     with:
       used-labels: ${{ toJSON(github.event.pull_request.labels.*.name) }}
-      python-version: 3.8
-      slurm-job: slurm-tests
+      python-version: "3.8"
+      slurm-job: "slurm-tests"
       server-url: ${{ github.server_url }}
       repository: ${{ github.repository }}
       run-id: ${{ github.run_id }}
