--- a/.github/workflows/selfhosted.yml
+++ b/.github/workflows/selfhosted.yml
@@ -16,8 +16,9 @@ jobs:
     with:
       used-labels: ${{ toJSON(github.event.pull_request.labels.*.name) }}
       python-version: "3.10"
-      artifact-url: "${{ github.server-url }}/${{ github.repository }}/actions/runs/${{ github.run-id }}"
-      poetry-extras: "--with tests"
+      repository-url: ${{ github.server-url }}/${{ github.repository }}
+      run-id: ${{ github.run-id }}
+      poetry-extras: "--with cuda11,tests"
 
     secrets:
       repo_token: ${{ secrets.GITHUB_TOKEN }}
