--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,22 @@ docs = "make -C doc html"
 docs-clean = "make -C doc clean"
 test-docs = "make -C doc doctest"
 
+[tool.poetry.group.cuda11]
+optional = true
+
+[tool.poetry.group.cuda11.dependencies]
+cupy-cuda11x = "^12.0.0"
+cuquantum-python-cu11 = "^23.3.0"
+qibojit = { git = "https://github.com/qiboteam/qibojit.git" }
+
+[tool.poetry.group.cuda12]
+optional = true
+
+[tool.poetry.group.cuda12.dependencies]
+cupy-cuda12x = "^12.0.0"
+cuquantum-python-cu12 = "^23.3.0"
+qibojit = { git = "https://github.com/qiboteam/qibojit.git" }
+
 [tool.pylint.reports]
 output-format = "colorized"
 
