--- a/.github/workflows/selfhosted.yml
+++ b/.github/workflows/selfhosted.yml
@@ -16,8 +16,7 @@ jobs:
     with:
       used-labels: ${{ toJSON(github.event.pull_request.labels.*.name) }}
       python-version: "3.10"
-      repository-url: ${{ github.server-url }}/${{ github.repository }}
-      run-id: ${{ github.run-id }}
+      artifact-url: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
       poetry-extras: "--with cuda11,tests"
 
     secrets:
