adding tests for python3.11

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,7 +30,7 @@ jobs:
     needs: [evaluate-label]
     uses: qiboteam/workflows/.github/workflows/deploy-ghpages-latest-stable.yml@main
     with:
-      python-version: 3.9
+      python-version: "3.10"
       package-manager: "poetry"
       dependency-path: "**/poetry.lock"
       trigger-label: "${{needs.evaluate-label.outputs.label}}"
