--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ optional = true
 pytest = "^7.2.1"
 cirq = "^1.1.0"
 qiskit = "^0.43.0"
-cvxpy = "1.3.0"
+cvxpy = "^1.3.0"
 ply = "^3.11"
 scikit-learn = "^1.2.1"
 dill = "^0.3.6"
