--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ optional = true
 [tool.poetry.group.tests.dependencies]
 pytest = "^7.2.1"
 cirq = "^1.1.0"
+cvxpy = "^1.3.1"
 ply = "^3.11"
 scikit-learn = "^1.2.1"
 dill = "^0.3.6"
@@ -70,6 +71,7 @@ test-docs = "make -C doc doctest"
 
 
 
+
 [tool.poetry.group.cuda11]
 optional = true
 
@@ -77,6 +79,7 @@ optional = true
 cupy-cuda11x = "^12.0.0"
 cuquantum-python-cu11 = "^23.3.0"
 qibojit = { git = "https://github.com/qiboteam/qibojit.git" }
+
 
 
 
