--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ furo = "^2022.12.7"
 recommonmark = "^0.7.1"
 sphinxcontrib-bibtex = "^2.5.0"
 sphinx-markdown-tables = "^0.0.17"
+sphinx-copybutton = "^0.5.2"
 nbsphinx = "^0.8.12"
 ipython = "^8.10.0"
 
@@ -66,6 +67,7 @@ docs = "make -C doc html"
 docs-clean = "make -C doc clean"
 test-docs = "make -C doc doctest"
 
+
 [tool.poetry.group.cuda11]
 optional = true
 
@@ -73,6 +75,7 @@ optional = true
 cupy-cuda11x = "^12.0.0"
 cuquantum-python-cu11 = "^23.3.0"
 qibojit = { git = "https://github.com/qiboteam/qibojit.git" }
+
 
 [tool.poetry.group.cuda12]
 optional = true
