--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,14 +55,14 @@ optional = true
 [tool.poetry.group.tests.dependencies]
 pytest = "^7.2.1"
 cirq = "^1.1.0"
-# cvxpy = "^1.3.1"
+cvxpy = "^1.3.1"
 ply = "^3.11"
 scikit-learn = "^1.2.1"
 dill = "^0.3.6"
 pytest-cov = "^4.0.0"
 pylint = "^2.16.2"
 qibojit = { git = "https://github.com/qiboteam/qibojit.git" }
-# tensorflow = { version = "^2.12.0", markers = "sys_platform == 'linux' or sys_platform == 'darwin'" }
+tensorflow = { version = "^2.12.0", markers = "sys_platform == 'linux' or sys_platform == 'darwin'" }
 # TODO: the marker is a temporary solution due to the lack of the tensorflow-io 0.32.0's wheels for Windows, this package is one of
 # the tensorflow requirements
 [tool.poe.tasks]
