--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ optional = true
 
 [tool.poetry.group.dev.dependencies]
 pdbpp = "^0.10.3"
+ipython = "^8.12.0"
 
 [tool.poetry.group.docs]
 optional = true
