--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ joblib = "^1.2.0"
 matplotlib = "^3.7.0"
 psutil = "^5.9.4"
 tabulate = "^0.9.0"
-more-itertools = "10.1.0"
+more-itertools = ">=9.1.0"
 
 [tool.poetry.group.docs]
 optional = true
