--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ joblib = "^1.2.0"
 matplotlib = "^3.7.0"
 psutil = "^5.9.4"
 tabulate = "^0.9.0"
-hyperopt = ">=0.2.6"
+hyperopt = "^0.2.6"
 
 [tool.poetry.group.docs]
 optional = true
