--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ dill = "^0.3.6"
 pytest-cov = "^4.0.0"
 pylint = "^2.16.2"
 hyperopt = "^0.2.6"
+seaborn = "^0.13.0"
 qibojit = { git = "https://github.com/qiboteam/qibojit.git" }
 tensorflow = { version = "^2.12.0", markers = "sys_platform == 'linux' or sys_platform == 'darwin'" }
 # TODO: the marker is a temporary solution due to the lack of the tensorflow-io 0.32.0's wheels for Windows, this package is one of
