--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ joblib = "^1.2.0"
 matplotlib = "^3.7.0"
 psutil = "^5.9.4"
 tabulate = "^0.9.0"
+seaborn = "^0.13.0"
 
 [tool.poetry.group.dev]
 optional = true
@@ -76,6 +77,7 @@ docs-clean = "make -C doc clean"
 test-docs = "make -C doc doctest"
 
 
+
 [tool.poetry.group.cuda11]
 optional = true
 
@@ -83,6 +85,7 @@ optional = true
 cupy-cuda11x = "^12.0.0"
 cuquantum-python-cu11 = "^23.3.0"
 qibojit = { git = "https://github.com/qiboteam/qibojit.git" }
+
 
 
 [tool.poetry.group.cuda12]
