--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ scikit-learn = "^1.2.1"
 dill = "^0.3.6"
 pytest-cov = "^4.0.0"
 pylint = "^2.16.2"
+matplotlib = "^3.7.0"
 qibojit = { git = "https://github.com/qiboteam/qibojit.git" }
 tensorflow = { version = "^2.12.0", markers = "sys_platform == 'linux' or sys_platform == 'darwin'" }
 # TODO: the marker is a temporary solution due to the lack of the tensorflow-io 0.32.0's wheels for Windows, this package is one of
@@ -75,7 +76,6 @@ docs-clean = "make -C doc clean"
 test-docs = "make -C doc doctest"
 
 
-
 [tool.poetry.group.cuda11]
 optional = true
 
@@ -83,7 +83,6 @@ optional = true
 cupy-cuda11x = "^12.0.0"
 cuquantum-python-cu11 = "^23.3.0"
 qibojit = { git = "https://github.com/qiboteam/qibojit.git" }
-
 
 
 [tool.poetry.group.cuda12]
