--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ cma = "^3.3.0"
 joblib = "^1.2.0"
 hyperopt = "^0.2.7"
 tabulate = "^0.9.0"
+dask = { version = "^2023.12.0", optional = true }
 
 [tool.poetry.group.dev]
 optional = true
