--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,9 +29,10 @@ joblib = "^1.2.0"
 hyperopt = "^0.2.7"
 tabulate = "^0.9.0"
 dask = { version = "^2023.12.0", optional = true }
+distributed = { version = "^2023.12.0", optional = true }
 
 [tool.poetry.extras]
-darray = ["dask"]
+darray = ["dask", "distributed"]
 
 [tool.poetry.group.dev]
 optional = true
