--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ pylint = "^3.0.3"
 matplotlib = "^3.7.0"
 qibojit = { git = "https://github.com/qiboteam/qibojit.git" }
 tensorflow = { version = "^2.15.0", markers = "sys_platform == 'linux'" }
+dask-jobqueue = "^0.8.2"
 
 [tool.poetry.group.cuda11]
 optional = true
