--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,9 @@ optional = true
 [tool.poetry.group.tests.dependencies]
 pytest = "^7.2.1"
 cirq = "^1.1.0"
-cvxpy = "^1.3.1"
+# cvxpy depends on [qdldl](https://pypi.org/project/qdldl] which does not distribute
+# wheels for Apple Silicon
+cvxpy = { version = "^1.3.1", markers = "sys_platform != 'darwin' or platform_machine != 'arm64'" }
 ply = "^3.11"
 scikit-learn = "^1.2.1"
 dill = "^0.3.6"
