remove dependency on qibojit branch

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,7 +62,7 @@ dill = "^0.3.6"
 pytest-cov = "^4.0.0"
 pylint = "^3.0.3"
 matplotlib = "^3.7.0"
-qibojit = { git = "https://github.com/qiboteam/qibojit.git", branch = "sxdg" }
+qibojit = { git = "https://github.com/qiboteam/qibojit.git" }
 tensorflow = { version = "^2.14.1", markers = "sys_platform == 'linux'" }
 
 [tool.poe.tasks]
@@ -79,7 +79,7 @@ optional = true
 [tool.poetry.group.cuda11.dependencies]
 cupy-cuda11x = "^12.0.0"
 cuquantum-python-cu11 = "^23.3.0"
-qibojit = { git = "https://github.com/qiboteam/qibojit.git", branch = "sxdg" }
+qibojit = { git = "https://github.com/qiboteam/qibojit.git" }
 
 [tool.poetry.group.cuda12]
 optional = true
@@ -87,7 +87,7 @@ optional = true
 [tool.poetry.group.cuda12.dependencies]
 cupy-cuda12x = "^12.0.0"
 cuquantum-python-cu12 = "^23.3.0"
-qibojit = { git = "https://github.com/qiboteam/qibojit.git", branch = "sxdg" }
+qibojit = { git = "https://github.com/qiboteam/qibojit.git" }
 
 [tool.pylint.reports]
 output-format = "colorized"
