Add qibotn as dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ pylint = "^3.0.3"
 matplotlib = "^3.7.0"
 qibojit = { git = "https://github.com/qiboteam/qibojit.git" }
 tensorflow = { version = "^2.14.1,<2.16", markers = "sys_platform == 'linux'" }
+qibotn = { git = "https://github.com/qiboteam/qibotn.git" }
 
 [tool.poe.tasks]
 test = "pytest"
@@ -85,6 +86,7 @@ optional = true
 cupy-cuda11x = "^12.0.0"
 cuquantum-python-cu11 = "^23.3.0"
 qibojit = { git = "https://github.com/qiboteam/qibojit.git" }
+qibotn = { git = "https://github.com/qiboteam/qibotn.git" }
 
 [tool.poetry.group.cuda12]
 optional = true
@@ -93,6 +95,7 @@ optional = true
 cupy-cuda12x = "^12.0.0"
 cuquantum-python-cu12 = "^23.3.0"
 qibojit = { git = "https://github.com/qiboteam/qibojit.git" }
+qibotn = { git = "https://github.com/qiboteam/qibotn.git" }
 
 [tool.pylint.reports]
 output-format = "colorized"
