--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,7 @@ matplotlib = "^3.7.0"
 qibojit = { git = "https://github.com/qiboteam/qibojit.git" }
 tensorflow = { version = "^2.14.1,<2.16", markers = "sys_platform == 'linux'" }
 qibotn = { git = "https://github.com/qiboteam/qibotn.git" }
+stim = "^1.12.0"
 
 [tool.poe.tasks]
 test = "pytest"
