--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ numpy = "^1.26.4"
 networkx = "^3.2.1"
 cvxpy = { version = "^1.4.2", optional = true }
 tensorflow = { version = "^2.14.1,<2.16", markers = "sys_platform == 'linux' or sys_platform == 'darwin'", optional = true }
+torch = { version = "^2.1.1", optional = true }
 
 [tool.poetry.group.dev]
 optional = true
